@@ -1,3 +1,8 @@
+Overview of changes in Glib <next>
+=================================
+
+* Make the recent thread-safety improvements work for non-threaded perls too.
+
 Overview of changes in Glib 1.251
 =================================
 
